--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SparseSparse"
 uuid = "0b78850f-dddf-4457-bd6b-a02e26699dc0"
 authors = ["Sébastien Loisel <sl398@hw.ac.uk>"]
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
